# crash-severity-tabnet-stacking

./: .gitignore  EDA_cleaned.ipynb  EDA_raw.ipynb  README.md  clean-feature-engineer.py  lightgbm.ipynb  lr.ipynb  mlp.ipynb  pyproject.toml  slides.md  stacking-ensemble.ipynb  tabnet.ipynb  test.ipynb
data/: data_cleaned.csv  datasource.txt
outputs/: lightgbm_metrics.json  lr_coefficients.csv  lr_equation.txt  lr_metrics.json  mlp_metrics.json  stacking_meta_coefficients.csv  stacking_meta_equation.txt  stacking_metrics.json  tabnet_metrics.json
